--- a/static/css/index.css
+++ b/static/css/index.css
@@ -16,100 +16,51 @@ body {
     z-index: 0;
     width: 100%;
     margin: 0;
-    background-color: #ededed;
-    color: white;
+    /*background-color: #ededed;*/
 }
-.imageBar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    overflow: hidden;
-}
-.labelBar {
-    padding: 50px 15%;
-    min-height: 200px;
-    background-color: #ededed;
+section > .logo {
     color: black;
-    font-size: 30px;
-    box-shadow: 0 -50px 50px rgba(0, 0, 0, 0.1);
-}
-.imageTitle {
+    font-size: 80px;
+    font-family: monospace;
     text-align: center;
-    font-size: 8rem;
-    color: #20A0FF;
-    text-shadow: 0 0 10px black;
-    letter-spacing: 10px;
+    padding: 150px 0 100px 0;
+    /*background-color: rgba(0, 0, 0, 0.2);*/
 }
-.imageView {
-    width: 100%;
-    height: 100%;
-}
-.scrollTip {
-    position: absolute;
-    font-size: 70px;
-    text-align: center;
-    width: 100%;
-    bottom: 10px;
-    text-shadow: 0 10px 10px black;
-}
-.bottom {
-    height: 200px;
-    background-color: #111;
-    box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    line-height: 200px;
-}
-.icon {
-    width: 128px;
-    height: 128px;
+section > .search-box {
+    width: 450px;
     margin: 0 auto;
-    transition: all .3s ease;
-}
-.html5_icon {background-image: url(img/icon/HTML5_Logo_128.png);}
-.css3_icon {background-image: url(img/icon/css3.png);}
-.jq_icon {background-image: url(img/icon/09322308.png);}
-
-.git_icon {background-image: url(img/icon/git.png);}
-.ins_icon {background-image: url(img/icon/ins.png);}
-.wechat_icon {background-image: url(img/icon/wechat.png);}
-
-.ps_icon {background-image: url(img/icon/ps.png);}
-.ai_icon {background-image: url(img/icon/ai.png);}
-.ios_icon {background-image: url(img/icon/ios.png);}
-
-.show {
-    position: relative;
-    float: left;
-    width: 33%;
-    cursor: pointer;
-}
-.show_title {
-    text-align: center;
-    font-size: 30px;
-    margin-top: 20px;
-    padding-top: 20px;
-    box-shadow: 0 -10px 10px -10px rgba(0, 0, 0, 0.4);
-}
-.flo {
     overflow: hidden;
-    text-align: center;
+    border-radius: 4px;
+    transition: all .6s ease;
 }
-.bluron {
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
-    -moz-filter: blur(8px);
-    -ms-filter: blur(8px);
-}
+section > .search-box:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);;
 
-.icon_detail {
-    position: absolute;
-    width: 100%;
-    height: 128px;
-    text-align: center;
-    line-height: 128px;
-    top: 0;
-    display: none;
-    transition: all .3s ease;
-    text-shadow: 0 0 10px white;
+}
+.search-box > .key-input {
+    float: left;
+    padding: 0;
+    margin: 0;
+    width: 356px;
+    height: 36px;
+    border-style: solid;
+    border-color: rgb(69, 168, 240);
+    border-width: 2px;
+    border-radius: 4px 0 0 4px;
+    outline: none;
+    font-size: 20px;
+    text-indent: 10px;
+}
+.search-box > .key-submit {
+    float: left;
+    width: 90px;
+    height: 40px;
+    background-color: rgb(69, 168, 240);
+    border-radius: 0 4px 4px 0;
+    cursor: pointer;
+    transition: all .6s ease;
+
+}
+.search-box > .key-submit:hover {
+    background-color: rgba(69, 168, 240, 0.8);
 }
