--- a/templates/index.html
+++ b/templates/index.html
@@ -5,86 +5,16 @@
         <meta name="viewport" content="width=decive-width, initial-scale=1.0,user-scalable=no, minimal-ui"/>
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/animation.css')}}"/>
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/index.css')}}"/>
-        <title>but0n</title>
+        <title>Jian'So</title>
     </head>
     <body>
-        <div class="imageBar">
-            <div class="imageView"></div>
-            <div class="scrollTip">&dArr;</div>
-        </div>
-        <div class="imageTitle">SKILL</div>
-        <div class="labelBar">
-            <div class="flo">
-                <div class="show">
-                    <div class="icon html5_icon"></div>
-                    <div class="icon_detail">HTML5</div>
-                </div>
-                <div class="show">
-                    <div class="icon css3_icon"></div>
-                    <div class="icon_detail">CSS3</div>
-                </div>
-                <div class="show">
-                    <div class="icon jq_icon"></div>
-                    <div class="icon_detail">jQuery</div>
-                </div>
+        <section>
+            <div class="logo">Jian'So</div>
+            <div class="search-box">
+                <input class="key-input" type="text" name="key" value="{{defaultKey}}">
+                <div class="key-submit"></div>
             </div>
-            <div class="show_title">About Frontend</div>
-
-        </div>
-
-        <div class="imageBar">
-            <div class="imageView"></div>
-        </div>
-        <div class="imageTitle">DESIGN</div>
-        <div class="labelBar">
-            <div class="flo">
-                <div class="show">
-                    <div class="icon ai_icon"></div>
-                    <div class="icon_detail">Adobe Illustractor</div>
-                </div>
-                <div class="show">
-                    <div class="icon ps_icon"></div>
-                    <div class="icon_detail">PhotoShop</div>
-                </div>
-                <div class="show">
-                    <div class="icon ios_icon"></div>
-                    <div class="icon_detail">Hand-drawn art </div>
-                </div>
-            </div>
-            <div class="show_title">About UserInterface</div>
-
-        </div>
-
-
-
-        <div class="imageBar">
-            <div class="imageView"></div>
-        </div>
-        <div class="imageTitle">CONTACT</div>
-        <div class="labelBar">
-            <div class="flo">
-                <div class="show">
-                    <div class="icon git_icon"></div>
-                    <div class="icon_detail">Github</div>
-                </div>
-                <div class="show">
-                    <div class="icon ins_icon"></div>
-                    <div class="icon_detail">Instagram</div>
-                </div>
-                <div class="show">
-                    <div class="icon wechat_icon"></div>
-                    <div class="icon_detail">Number:32700567</div>
-                </div>
-            </div>
-            <div class="show_title">Contact Me !</div>
-        </div>
-
-
-
-        <div class="bottom">Created by jack, March 23, 2016.</div>
-
-
-
+        </section>
         <script src="{{url_for('static', filename='scripts/jquery-2.1.4.min.js')}}"></script>
         <script src="{{url_for('static', filename='scripts/index.js')}}"></script>
     </body>
