--- a/static/css/search.css
+++ b/static/css/search.css
@@ -1,29 +1,11 @@
-* {font-family: sans-serif;}
-*::-webkit-scrollbar {
-    background-color: rgba(0, 0, 0, 0);
-    width: 0;
-}
-*::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.6);
-    border-radius: 4px;
-}
-*::-webkit-scrollbar-corner {
-    background-color: rgba(0,0,0,0);
-}
-/** {transition: all .6s ease;}*/
-body {
-    position: relative;
-    z-index: 0;
-    width: 100%;
-    margin: 0;
-    /*background-color: #ededed;*/
-}
 header {
-    height: 150px;
-    padding: 0 5%;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 250px;
     color: white;
-    background-color: #03A9F4;
-
+    /*background-color: #03A9F4;*/
+    background-color: rgb(55, 156, 205);
 }
 header > .logo {
     font-size: 55px;
@@ -37,31 +19,27 @@ header > .label {
 section {
     width: 900px;
     margin: 0 auto;
-    padding: 20px 0;
+    padding: 90px 0;
     overflow: hidden;
+    background-color: white;
 }
 section > .res-item {
-    float: left;
-    width: 180px;
-    height: 240px;
-    margin: 20px;
-    border-radius: 8px;
-    background-color: #FF5722;
+    width: 900px;
+    height: 140px;
+    background-color: white;
     position: relative;
     cursor: pointer;
     text-align: center;
-    line-height: 240px;
-    color: rgba(255, 255, 255, 0.6);;
+    color: rgba(255, 255, 255, 0.6);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);;
+    transition: all 0.4s ease;
+}
+section > .res-item:hover {
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
 }
 .res-item > .item-name {
-    height: 40px;
-    width: 100%;
-    border-radius: 0 0 8px 8px;
     text-align: center;
-    line-height: 40px;
     font-size: 18px;
-    color: white;
+    color: black;
     background-color: rgba(255, 152, 0, 0.6);
-    position: absolute;
-    bottom: 0;
 }
