--- a/templates/searchList.html
+++ b/templates/searchList.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset=utf-8>
         <meta name="viewport" content="width=decive-width, initial-scale=1.0,user-scalable=no, minimal-ui"/>
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/main.css')}}"/>
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/animation.css')}}"/>
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/search.css')}}"/>
         <title>[{{title}}]相关电影-Jian'So</title>
