--- a/static/css/search.css
+++ b/static/css/search.css
@@ -1,6 +1,4 @@
 header {
-    position: absolute;
-    top: 0;
     width: 100%;
     height: 250px;
     color: white;
@@ -8,38 +6,34 @@ header {
     background-color: rgb(55, 156, 205);
 }
 header > .logo {
-    font-size: 55px;
+    font-size: 48px;
     font-family: monospace;
+    text-indent: 20px;
 }
-header > .label {
-    font-size: 20px;
-    margin: 30px 0 0 0;
-    text-align: center;
-}
+
 section {
     width: 900px;
-    margin: 0 auto;
-    padding: 90px 0;
-    overflow: hidden;
-    background-color: white;
+    height: 800px;
+    margin: -160px auto 0 auto;
+    padding: 20px 0;
+    background-color: red;
 }
-section > .res-item {
-    width: 900px;
-    height: 140px;
+section > .item {
+    height: 180px;
     background-color: white;
-    position: relative;
     cursor: pointer;
-    text-align: center;
     color: rgba(255, 255, 255, 0.6);
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);;
-    transition: all 0.4s ease;
 }
 section > .res-item:hover {
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
 }
-.res-item > .item-name {
-    text-align: center;
-    font-size: 18px;
-    color: black;
-    background-color: rgba(255, 152, 0, 0.6);
+.item > .item-img {
+    float: left;
+    width: 105px;
+    height: 140px;
+    background-color: black;
+}
+.item > .item-label {
+    float: left;
 }
