--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,6 +18,9 @@ body {
     margin: 0;
     padding: 0;
     background-color: #eaeaea;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 .white-text {color: rgba(255, 255, 255, 1);}
 .white-secondary {color: rgba(255, 255, 255, 0.7);}
