--- a/static/css/search.css
+++ b/static/css/search.css
@@ -12,13 +12,13 @@ header > .logo {
 }
 
 section {
-    width: 900px;
-    height: 800px;
+    /*width: 900px;*/
+    width: 11.25rem;
     margin: -160px auto 0 auto;
-    padding-bottom: 40px;
 }
 section > .item {
-    min-height: 185px;
+    min-height: 2.3125rem;
+    /*min-height: 185px;*/
     overflow: hidden;
     background-color: white;
     color: rgba(255, 255, 255, 0.6);
@@ -32,29 +32,40 @@ section > .res-item:hover {
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
 }
 section > .message-total {
-    padding: 20px 0;
+    /*padding: 20px 0;*/
+    /*background-color: white;*/
+    /*font-size: 16px;*/
+    /*text-indent: 40px;*/
+    padding: 0.25rem 0;
     background-color: white;
-    font-size: 16px;
-    text-indent: 40px;
+    font-size: 0.2rem;
+    text-indent: 0.5rem;
     color: rgba(0, 0, 0, 0.26);
 }
 .item > .item-img {
     float: left;
-    width: 105px;
-    height: 105px;
-    margin: 40px;
-    background-size: 105px;
+    /*width: 105px;*/
+    /*height: 105px;*/
+    width: 1.3125rem;
+    height: 1.3125rem;
+    margin: 0.5rem;
+    /*margin: 40px;*/
+    background-size: 1.3125rem;
+    /*background-size: 105px;*/
     background-position: center;
     border-radius: 100%;
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.26);
-    transition: all .2s ease;
+    transition: transform .2s ease;
 }
 .item > .item-label {
     float: left;
-    width: 715px;
-    height: 103px;
-    padding: 40px 0;
+    /*width: 715px;*/
+    width: 8.9375rem;
+    height: 1.2875rem;
+    /*height: 103px;*/
+    padding: 0.5rem 0;
+    /*padding: 40px 0;*/
     border-style: solid;
     border-width: 0 0 2px 0;
     border-color: #eaeaea;
@@ -63,25 +74,29 @@ section > .message-total {
     justify-content: space-between;
 }
 .item-label > .label-title {
-    font-size: 24px;
+    font-size: 0.3rem;
+    /*font-size: 24px;*/
     color: rgba(0, 0, 0, 0.54);
     cursor: pointer;
-    transition: all .1s ease;
+    transition: font-size,color .2s ease;
     text-decoration: underline;
+    padding-right: 0.5rem;
+    /*padding-right: 40px;*/
 
 }
 .item-active  .label-title {
-    font-size: 15px;
+    font-size: 0.1875rem;
+    /*font-size: 15px;*/
     color: rgb(55, 156, 205);
     text-decoration: none;
     cursor: text;
     word-break: break-all;
-    padding-right: 20px;
 
 }
 
 .item-label > .label-detail {
-    font-size: 16px;
+    font-size: 0.2rem;
+    /*font-size: 16px;*/
     color: rgba(0, 0, 0, 0.26);
 }
 .item > .item-dashBar {
@@ -93,16 +108,21 @@ section > .message-total {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0 40px;
+    padding: 0 .5rem;
+    /*padding: 0 40px;*/
 }
 .item-dashBar > .dash-label {
-    font-size: 34px;
+    font-size: 0.425rem;
+    /*font-size: 34px;*/
     color: rgba(0, 0, 0, 0.54);
     cursor: pointer;
 }
 .item-dashBar > .dash-icon {
-    width: 30px;
-    height: 30px;
+    width: 0.375rem;
+    /*width: 30px;*/
+    height: 0.375rem;
+    /*height: 30px;*/
+    background-size: 0.375rem;
     background-image: url("../img/down.png");
     cursor: pointer;
     transition: all .2s ease;
@@ -111,6 +131,7 @@ section > .message-total {
     transform: rotate(360deg);
 }
 .item-active .item-dashBar {
-    height: 60px;
+    height: 0.75rem;
+    /*height: 60px;*/
     opacity: 1;
 }
