--- a/static/css/search.css
+++ b/static/css/search.css
@@ -22,10 +22,11 @@ section > .item {
     overflow: hidden;
     background-color: white;
     color: rgba(255, 255, 255, 0.6);
-    transition: all .6s ease;
+    transition: all .2s ease;
 }
 section > .item-active {
-    margin: 40px 0;
+    margin: 0.5rem 0;
+    /*margin: 40px 0;*/
     transform: scale(1.07);
 }
 section > .res-item:hover {
@@ -67,7 +68,8 @@ section > .message-total {
     padding: 0.5rem 0;
     /*padding: 40px 0;*/
     border-style: solid;
-    border-width: 0 0 2px 0;
+    border-width: 0 0 0.025rem 0;
+    /*border-width: 0 0 2px 0;*/
     border-color: #eaeaea;
     display: flex;
     flex-direction: column;
@@ -78,14 +80,14 @@ section > .message-total {
     /*font-size: 24px;*/
     color: rgba(0, 0, 0, 0.54);
     cursor: pointer;
-    transition: font-size,color .2s ease;
+    transition: font-size ,color .2s ease;
     text-decoration: underline;
     padding-right: 0.5rem;
     /*padding-right: 40px;*/
 
 }
 .item-active  .label-title {
-    font-size: 0.1875rem;
+    font-size: 0.0875rem;
     /*font-size: 15px;*/
     color: rgb(55, 156, 205);
     text-decoration: none;
